k8s/mongo-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
  labels:
    app: mongo-statefulset
spec:
  serviceName: "mongo"
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
          - containerPort: 27017
            name: mongodb
          volumeMounts: 
          - name: data
            mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
