k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sc-namespace
  name: smart-campus-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: smart-campus-be-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-campus-fe-service
                port:
                  number: 80
